[gd_scene load_steps=35 format=3 uid="uid://bgfo3l08bifum"]

[ext_resource type="Script" path="res://scenes/goat.gd" id="1_2in7i"]
[ext_resource type="Texture2D" uid="uid://ypx8ekjf3e6v" path="res://assets/goat/spritesheets/charge.png" id="2_srj55"]
[ext_resource type="Texture2D" uid="uid://dml3t6s147ax" path="res://assets/goat/spritesheets/idle.png" id="2_t8pnn"]
[ext_resource type="Texture2D" uid="uid://daaa5n1pvsgys" path="res://assets/goat/spritesheets/running.png" id="3_ctjsc"]
[ext_resource type="Texture2D" uid="uid://b5nikspex6p6b" path="res://assets/goat/spritesheets/falling.png" id="3_diymy"]
[ext_resource type="Texture2D" uid="uid://1atsr4was4gj" path="res://assets/goat/spritesheets/knocked_out.png" id="4_3nynr"]
[ext_resource type="AudioStream" uid="uid://bifywuylcu8nl" path="res://assets/sounds/knockout.wav" id="7_714fh"]
[ext_resource type="AudioStream" uid="uid://dslkg4d2cosb2" path="res://assets/sounds/step1.wav" id="8_d2ue2"]
[ext_resource type="AudioStream" uid="uid://ccqkhsg06rxe8" path="res://assets/sounds/step3.wav" id="10_2172m"]
[ext_resource type="AudioStream" uid="uid://dm22fy56084vj" path="res://assets/sounds/step4.wav" id="11_7o3cq"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_01sup"]
radius = 12.0
height = 34.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b240r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rclbf"]
atlas = ExtResource("2_srj55")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0nai"]
atlas = ExtResource("2_srj55")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o06b"]
atlas = ExtResource("2_srj55")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ediec"]
atlas = ExtResource("2_t8pnn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kvag"]
atlas = ExtResource("2_t8pnn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8862"]
atlas = ExtResource("2_t8pnn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_no5dt"]
atlas = ExtResource("2_t8pnn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j15m5"]
atlas = ExtResource("2_t8pnn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_41lls"]
atlas = ExtResource("2_t8pnn")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1tie"]
atlas = ExtResource("4_3nynr")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_51itk"]
atlas = ExtResource("4_3nynr")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yw58"]
atlas = ExtResource("3_ctjsc")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgp6e"]
atlas = ExtResource("3_ctjsc")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7w1qq"]
atlas = ExtResource("3_ctjsc")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r37ih"]
atlas = ExtResource("3_diymy")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tknaq"]
atlas = ExtResource("3_diymy")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sc6n"]
atlas = ExtResource("3_diymy")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_au2ay"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rclbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0nai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o06b")
}],
"loop": true,
"name": &"charging",
"speed": 18.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ediec")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kvag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8862")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no5dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j15m5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41lls")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1tie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_51itk")
}],
"loop": true,
"name": &"knocked_out",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yw58")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgp6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7w1qq")
}],
"loop": true,
"name": &"running",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r37ih")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tknaq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sc6n")
}],
"loop": true,
"name": &"slamming",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_408vh"]
size = Vector2(28, 51)

[sub_resource type="Animation" id="Animation_xq4x5"]
resource_name = "slamming_left"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.000241599, -1.94779]
}

[sub_resource type="Animation" id="Animation_dhr6c"]
resource_name = "slamming_right"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.000241599, 1.9481]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sxpwc"]
_data = {
"slamming_left": SubResource("Animation_xq4x5"),
"slamming_right": SubResource("Animation_dhr6c")
}

[node name="goat" type="CharacterBody2D" groups=["player"]]
z_index = 1
rotation = 0.000241599
floor_max_angle = 1.0472
script = ExtResource("1_2in7i")
metadata/_edit_group_ = true

[node name="collider" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_01sup")

[node name="sprite" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_b240r")
position = Vector2(1, -3)
scale = Vector2(1.01586, 0.977672)
sprite_frames = SubResource("SpriteFrames_au2ay")
animation = &"running"

[node name="jump_buffer_timeout" type="Timer" parent="."]
autostart = true

[node name="charge_timeout" type="Timer" parent="."]
wait_time = 0.5

[node name="attack_area" type="Area2D" parent="."]

[node name="attack_collider" type="CollisionShape2D" parent="attack_area"]
position = Vector2(21, -8.5)
shape = SubResource("RectangleShape2D_408vh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_process_mode = 0
libraries = {
"": SubResource("AnimationLibrary_sxpwc")
}

[node name="health_regen_timeout" type="Timer" parent="."]
one_shot = true

[node name="knockout_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_714fh")

[node name="step1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_d2ue2")
volume_db = -1.0
attenuation = 2.0
max_polyphony = 3

[node name="step3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_2172m")
volume_db = -1.0
attenuation = 2.0
max_polyphony = 3

[node name="step4" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_7o3cq")
volume_db = -1.0
attenuation = 2.0
max_polyphony = 3

[node name="step_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="timeout" from="jump_buffer_timeout" to="." method="_on_jump_buffer_timeout_timeout"]
[connection signal="timeout" from="charge_timeout" to="." method="_on_charge_timeout_timeout"]
[connection signal="body_entered" from="attack_area" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="health_regen_timeout" to="." method="_on_health_regen_timeout_timeout"]
[connection signal="timeout" from="step_timer" to="." method="_on_step_timer_timeout"]
